# VWR-Codec

./: README.md
algorithms/videoseal/: .gitignore  .pre-commit-config.yaml  100batch.py  README.md  bitaccuracy.py  inference_av.py  inference_streaming.py  pyproject.toml  requirements.txt  train.py
algorithms/videoseal/.github/: CONTRIBUTING.md
algorithms/videoseal/configs/: all_augs.yaml  attenuation.yaml  embedder.yaml  extractor.yaml
algorithms/videoseal/configs/ablations/: embedder.yaml  extractor.yaml
algorithms/videoseal/configs/datasets/: coco.yaml  sa-1b-full-resized.yaml  sa-1b.yaml  sa-v.yaml
algorithms/videoseal/docs/: baselines.md  torchscript.md  training.md  vmaf.md
algorithms/videoseal/notebooks/: colab.ipynb  image_inference.ipynb  video_inference.ipynb  video_inference_streaming.ipynb
algorithms/videoseal/scripts/: inflate_model_to_temporal.py  make_config.py  process_sab.py
algorithms/videoseal/videoseal/: __init__.py
algorithms/videoseal/videoseal/augmentation/: __init__.py  augmenter.py  doaugs.py  geometric.py  masks.py  sequential.py  valuemetric.py  video.py
algorithms/videoseal/videoseal/cards/: videoseal_0.0.yaml  videoseal_1.0.yaml
algorithms/videoseal/videoseal/data/: datasets.py  loader.py  transforms.py
algorithms/videoseal/videoseal/evals/: flops.py  full.py  metrics.py  speed.py  step_size_eval.py
algorithms/videoseal/videoseal/losses/: __init__.py  dists.py  focal.py  jndloss.py  perceptual.py  ssim.py  (+4 more)
algorithms/videoseal/wmforger/: README.md  example.ipynb  optimize_image.py  train-slurm.sh  train.py
(+114 files in other folders)
